k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choustoulakis-cms-svc
spec:
  selector:
    deployment: choustoulakis-cms-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
